# DeepIron

.github/workflows/: rust.yml
DeepIron/: Cargo.toml  README.md
DeepIron/src/: dataLoader.rs  data_loader.rs  hierarchical_clustering.rs  k_means.rs  layers.rs  lib.rs  linearRegression.rs  linear_regression.rs  logistic_regression.rs  model.rs  multilayer_perceptron.rs  support_vector_machine.rs
docs/: README.MD
