[package]
name = "DeepIron"
version = "0.1.0"
edition = "2021"
keywords = ["rust", "machine_learning", "deep_learning", "data_science"]
categories = ["science"]
authors = ["LordSaumya"]
license = "MIT"
repository = "https://github.com/LordSaumya/DeepIron"
description = "A simple Rust library for machine learning and deep learning."

[dependencies]
polars = "0.35.4"
rand = "0.8.5"

[lib]
name = "DeepIron"
path = "src/lib.rs"
doctest = false
